fix(Header): scrolling down only reduces opacity, and doesn't reduce size of header.
still jittery - in production, this was especially bad because it happened in core user flow when someone tried to sign up for a class on timetable page. kept transparency because it enables visibility, but the changing in size is just too much. #43

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -13,7 +13,6 @@
 .headerShrunk {
   composes: header;
   background-color: hsla(0, 0%, 100%, 90%);
-  padding: 16px;
   transition: opacity var(--transition-time);
 }
 
